# planetscale-csv-upload

crates/upload-pokemon-data/: Cargo.toml  README.md  create-tables.sql  pokemon.csv
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
