[package]
edition = "2021"
name = "upload-pokemon-data"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
csv = "1.1.6"
ksuid = "0.2.0"
serde = {version = "1.0.136", features = ["derive"]}
sqlx = {version = "0.5.11", features = ["mysql", "runtime-tokio-rustls"]}
